[JBR17] can't login to jetbrains.team
GitOrigin-RevId: 794ef0a628da67503d5a0826d713ea7906fe26e7